[CSS Blending] Blend mode property is propagated to multiple GraphicLayers https://bugs.webkit.org/show_bug.cgi?id=130337

Patch by Ion Rosca <rosca@adobe.com> on 2014-03-31
Reviewed by Dean Jackson.

Source/WebCore:

Resets the blend mode for graphicsLayer when it has an ancestorClippingLayer.

Test: css3/compositing/blend-mode-ancestor-clipping-layer.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updateBlendMode):
(WebCore::RenderLayer::calculateClipRects):
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateBlendMode):
* rendering/RenderLayerBacking.h:

LayoutTests:

* css3/compositing/blend-mode-ancestor-clipping-layer-expected.txt: Added.
* css3/compositing/blend-mode-ancestor-clipping-layer.html: Added.

Canonical link: https://commits.webkit.org/149037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166526 268f45cc-cd09-0410-ab3c-d52691b4dbfc